Snapshot on step (#710)
snapshots are now created on each step and also added to video, when ffmpeg is installed